fix: prevent scroll on desktop overflow (#6)

--- a/src/aqua-css/desktop.css
+++ b/src/aqua-css/desktop.css
@@ -43,6 +43,9 @@ body {
 .desktopDraggable {
   position: relative;
   flex-grow: 1;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .desktop .aqua-window {
